--- a/app/views/pizzas/index.html.erb
+++ b/app/views/pizzas/index.html.erb
@@ -6,14 +6,14 @@
   <div class="col-md-10 col-md-offset-1">
     <% @pizzas.each do |pizza|%>
       <div class="field center">
-        <h1 class="font-conten"><strong> <%= link_to pizza.name, pizza %> </strong> </h1>
+        <h1 class="font-conten"><strong> <%= link_to pizza.name, pizza %>  <%= pizza.votes%></strong> </h1>
       </div>
       <div class="field font-conten", style="text-align: left;">
         <%= pizza.ingredients%>
       </div>
-      <div id="ellink", class="filed font-button center">
-          <%= link_to "Eliminar", pizzas_path, class:"btn be-black", method: :delete %>
-      </div>
+      <!-- <div id="ellink", class="filed font-button center"> -->
+          <!-- <%= link_to "Eliminar", pizzas_path, class:"btn be-black", method: :delete %> -->
+      <!-- </div> -->
 
     <%end%>
   </div>
